[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["repl.it user <replituser@example.com>"]
description = ""
name = "encoder-decoder"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.7"
replit = "^1.1"
[tool.poetry.dev-dependencies]
